k8s/k8s-manifests/helms/ingress-apple-banana/kustomize-fruits/overlays/apple/apple-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
spec:
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        args:
        - "-text=apple"
