k8s/k8s-manifests/helms/ingress-apple-banana/kustomize-fruits/overlays/apple/apple-service-patch.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  selector:
    app: apple
